y.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment_statement
    5          | print_statement
    6          | if_statement
    7          | while_statement
    8          | for_statement
    9          | do_statement
   10          | break_statement
   11          | continue_statement
   12          | return_statement
   13          | error_statement
   14          | function_declaration
   15          | function_call
   16          | const_declaration
   17          | switch_statement
   18          | enum_declaration_list

   19 assignment_statement: IDENTIFIER ASSIGN expression SEMICOLON
   20                     | IDENTIFIER ASSIGN function_call
   21                     | enum_assignment_statement

   22 function_declaration: FUNCTION IDENTIFIER LPAREN function_parameters RPAREN LBRACE statement_list RBRACE

   23 function_parameters: function_parameters COMMA IDENTIFIER
   24                    | IDENTIFIER

   25 function_call: IDENTIFIER LPAREN function_arguments RPAREN SEMICOLON

   26 function_arguments: function_arguments COMMA expression
   27                   | expression

   28 const_declaration: CONST assignment_statement

   29 switch_statement: SWITCH LPAREN IDENTIFIER RPAREN LBRACE switch_statement_details RBRACE

   30 switch_statement_details: switch_statement_details switch_case
   31                         | switch_case

   32 switch_case: CASE expression COLON statement_list
   33            | DEFAULT COLON statement_list

   34 enum_declaration_list: enum_declaration

   35 enum_declaration: ENUM IDENTIFIER LBRACE enum_item_list RBRACE SEMICOLON

   36 enum_item_list: enum_item
   37               | enum_item_list COMMA enum_item

   38 enum_item: IDENTIFIER
   39          | IDENTIFIER ASSIGN expression

   40 enum_assignment_statement: IDENTIFIER IDENTIFIER ASSIGN IDENTIFIER SEMICOLON

   41 print_statement: PRINT expression SEMICOLON

   42 if_statement: IF LPAREN expression RPAREN LBRACE statement_list RBRACE
   43             | IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_statement_list
   44             | IF LPAREN expression RPAREN LBRACE statement_list RBRACE else_statement
   45             | IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_statement_list else_statement

   46 elif_statement_list: elif_statement_list elif_statement
   47                    | elif_statement

   48 elif_statement: ELIF LPAREN expression RPAREN LBRACE statement_list RBRACE

   49 else_statement: ELSE LBRACE statement_list RBRACE

   50 while_statement: WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE

   51 for_statement: FOR LPAREN for_init expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

   52 for_init: assignment_statement
   53         | SEMICOLON

   54 for_update: assignment_statement
   55           | SEMICOLON

   56 do_statement: DO LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

   57 break_statement: BREAK SEMICOLON

   58 continue_statement: CONTINUE SEMICOLON

   59 return_statement: RETURN expression SEMICOLON

   60 error_statement: ERROR SEMICOLON

   61 expression: INTEGER
   62           | STRING
   63           | IDENTIFIER
   64           | NILL
   65           | LPAREN expression RPAREN
   66           | expression PLUS expression
   67           | expression MINUS expression
   68           | expression TIMES expression
   69           | expression DIVIDE expression
   70           | expression EQUAL expression
   71           | expression NOTEQUAL expression
   72           | expression GREATER expression
   73           | expression GREATEREQUAL expression
   74           | expression LESS expression
   75           | expression LESSEQUAL expression
   76           | NOT expression
   77           | expression OR expression
   78           | expression AND expression
   79           | MINUS expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <sval> (258) 19 20 22 23 24 25 29 35 38 39 40 63
    STRING <sval> (259) 62
    INTEGER <ival> (260) 61
    PRINT (261) 41
    IF (262) 42 43 44 45
    ELSE (263) 49
    WHILE (264) 50 56
    FOR (265) 51
    DO (266) 56
    BREAK (267) 57
    CONTINUE (268) 58
    RETURN (269) 59
    ERROR (270) 60
    ASSIGN (271) 19 20 39 40
    PLUS (272) 66
    MINUS (273) 67 79
    TIMES (274) 68
    DIVIDE (275) 69
    LPAREN (276) 22 25 29 42 43 44 45 48 50 51 56 65
    RPAREN (277) 22 25 29 42 43 44 45 48 50 51 56 65
    SEMICOLON (278) 19 25 35 40 41 51 53 55 56 57 58 59 60
    EQUAL (279) 70
    NOTEQUAL (280) 71
    GREATER (281) 72
    GREATEREQUAL (282) 73
    LESS (283) 74
    LESSEQUAL (284) 75
    COMMA (285) 23 26 37
    LBRACE (286) 22 29 35 42 43 44 45 48 49 50 51 56
    RBRACE (287) 22 29 35 42 43 44 45 48 49 50 51 56
    FUNCTION (288) 22
    CONST (289) 28
    OR (290) 77
    AND (291) 78
    NOT (292) 76
    SWITCH (293) 29
    CASE (294) 32
    COLON (295) 32 33
    DEFAULT (296) 33
    ELIF (297) 48
    ENUM (298) 35
    NILL (299) 64
    UMINUS (300)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program (47)
        on left: 1
        on right: 0
    statement_list (48)
        on left: 2 3
        on right: 1 3 22 32 33 42 43 44 45 48 49 50 51 56
    statement (49)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 2 3
    assignment_statement (50)
        on left: 19 20 21
        on right: 4 28 52 54
    function_declaration (51)
        on left: 22
        on right: 14
    function_parameters (52)
        on left: 23 24
        on right: 22 23
    function_call (53)
        on left: 25
        on right: 15 20
    function_arguments (54)
        on left: 26 27
        on right: 25 26
    const_declaration (55)
        on left: 28
        on right: 16
    switch_statement (56)
        on left: 29
        on right: 17
    switch_statement_details (57)
        on left: 30 31
        on right: 29 30
    switch_case (58)
        on left: 32 33
        on right: 30 31
    enum_declaration_list (59)
        on left: 34
        on right: 18
    enum_declaration (60)
        on left: 35
        on right: 34
    enum_item_list (61)
        on left: 36 37
        on right: 35 37
    enum_item (62)
        on left: 38 39
        on right: 36 37
    enum_assignment_statement (63)
        on left: 40
        on right: 21
    print_statement (64)
        on left: 41
        on right: 5
    if_statement (65)
        on left: 42 43 44 45
        on right: 6
    elif_statement_list (66)
        on left: 46 47
        on right: 43 45 46
    elif_statement (67)
        on left: 48
        on right: 46 47
    else_statement (68)
        on left: 49
        on right: 44 45
    while_statement (69)
        on left: 50
        on right: 7
    for_statement (70)
        on left: 51
        on right: 8
    for_init (71)
        on left: 52 53
        on right: 51
    for_update (72)
        on left: 54 55
        on right: 51
    do_statement (73)
        on left: 56
        on right: 9
    break_statement (74)
        on left: 57
        on right: 10
    continue_statement (75)
        on left: 58
        on right: 11
    return_statement (76)
        on left: 59
        on right: 12
    error_statement (77)
        on left: 60
        on right: 13
    expression (78)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 19 26 27 32 39 41 42 43 44 45 48 50 51 56 59 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13
    ENUM        shift, and go to state 14

    program                    go to state 15
    statement_list             go to state 16
    statement                  go to state 17
    assignment_statement       go to state 18
    function_declaration       go to state 19
    function_call              go to state 20
    const_declaration          go to state 21
    switch_statement           go to state 22
    enum_declaration_list      go to state 23
    enum_declaration           go to state 24
    enum_assignment_statement  go to state 25
    print_statement            go to state 26
    if_statement               go to state 27
    while_statement            go to state 28
    for_statement              go to state 29
    do_statement               go to state 30
    break_statement            go to state 31
    continue_statement         go to state 32
    return_statement           go to state 33
    error_statement            go to state 34


State 1

   19 assignment_statement: IDENTIFIER . ASSIGN expression SEMICOLON
   20                     | IDENTIFIER . ASSIGN function_call
   25 function_call: IDENTIFIER . LPAREN function_arguments RPAREN SEMICOLON
   40 enum_assignment_statement: IDENTIFIER . IDENTIFIER ASSIGN IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 35
    ASSIGN      shift, and go to state 36
    LPAREN      shift, and go to state 37


State 2

   41 print_statement: PRINT . expression SEMICOLON

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 45


State 3

   42 if_statement: IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
   43             | IF . LPAREN expression RPAREN LBRACE statement_list RBRACE elif_statement_list
   44             | IF . LPAREN expression RPAREN LBRACE statement_list RBRACE else_statement
   45             | IF . LPAREN expression RPAREN LBRACE statement_list RBRACE elif_statement_list else_statement

    LPAREN  shift, and go to state 46


State 4

   50 while_statement: WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 47


State 5

   51 for_statement: FOR . LPAREN for_init expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 48


State 6

   56 do_statement: DO . LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    LBRACE  shift, and go to state 49


State 7

   57 break_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 8

   58 continue_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 9

   59 return_statement: RETURN . expression SEMICOLON

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 52


State 10

   60 error_statement: ERROR . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 11

   22 function_declaration: FUNCTION . IDENTIFIER LPAREN function_parameters RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 54


State 12

   28 const_declaration: CONST . assignment_statement

    IDENTIFIER  shift, and go to state 55

    assignment_statement       go to state 56
    enum_assignment_statement  go to state 25


State 13

   29 switch_statement: SWITCH . LPAREN IDENTIFIER RPAREN LBRACE switch_statement_details RBRACE

    LPAREN  shift, and go to state 57


State 14

   35 enum_declaration: ENUM . IDENTIFIER LBRACE enum_item_list RBRACE SEMICOLON

    IDENTIFIER  shift, and go to state 58


State 15

    0 $accept: program . $end

    $end  shift, and go to state 59


State 16

    1 program: statement_list .
    3 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13
    ENUM        shift, and go to state 14

    $default  reduce using rule 1 (program)

    statement                  go to state 60
    assignment_statement       go to state 18
    function_declaration       go to state 19
    function_call              go to state 20
    const_declaration          go to state 21
    switch_statement           go to state 22
    enum_declaration_list      go to state 23
    enum_declaration           go to state 24
    enum_assignment_statement  go to state 25
    print_statement            go to state 26
    if_statement               go to state 27
    while_statement            go to state 28
    for_statement              go to state 29
    do_statement               go to state 30
    break_statement            go to state 31
    continue_statement         go to state 32
    return_statement           go to state 33
    error_statement            go to state 34


State 17

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 18

    4 statement: assignment_statement .

    $default  reduce using rule 4 (statement)


State 19

   14 statement: function_declaration .

    $default  reduce using rule 14 (statement)


State 20

   15 statement: function_call .

    $default  reduce using rule 15 (statement)


State 21

   16 statement: const_declaration .

    $default  reduce using rule 16 (statement)


State 22

   17 statement: switch_statement .

    $default  reduce using rule 17 (statement)


State 23

   18 statement: enum_declaration_list .

    $default  reduce using rule 18 (statement)


State 24

   34 enum_declaration_list: enum_declaration .

    $default  reduce using rule 34 (enum_declaration_list)


State 25

   21 assignment_statement: enum_assignment_statement .

    $default  reduce using rule 21 (assignment_statement)


State 26

    5 statement: print_statement .

    $default  reduce using rule 5 (statement)


State 27

    6 statement: if_statement .

    $default  reduce using rule 6 (statement)


State 28

    7 statement: while_statement .

    $default  reduce using rule 7 (statement)


State 29

    8 statement: for_statement .

    $default  reduce using rule 8 (statement)


State 30

    9 statement: do_statement .

    $default  reduce using rule 9 (statement)


State 31

   10 statement: break_statement .

    $default  reduce using rule 10 (statement)


State 32

   11 statement: continue_statement .

    $default  reduce using rule 11 (statement)


State 33

   12 statement: return_statement .

    $default  reduce using rule 12 (statement)


State 34

   13 statement: error_statement .

    $default  reduce using rule 13 (statement)


State 35

   40 enum_assignment_statement: IDENTIFIER IDENTIFIER . ASSIGN IDENTIFIER SEMICOLON

    ASSIGN  shift, and go to state 61


State 36

   19 assignment_statement: IDENTIFIER ASSIGN . expression SEMICOLON
   20                     | IDENTIFIER ASSIGN . function_call

    IDENTIFIER  shift, and go to state 62
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    function_call  go to state 63
    expression     go to state 64


State 37

   25 function_call: IDENTIFIER LPAREN . function_arguments RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    function_arguments  go to state 65
    expression          go to state 66


State 38

   63 expression: IDENTIFIER .

    $default  reduce using rule 63 (expression)


State 39

   62 expression: STRING .

    $default  reduce using rule 62 (expression)


State 40

   61 expression: INTEGER .

    $default  reduce using rule 61 (expression)


State 41

   79 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 67


State 42

   65 expression: LPAREN . expression RPAREN

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 68


State 43

   76 expression: NOT . expression

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 69


State 44

   64 expression: NILL .

    $default  reduce using rule 64 (expression)


State 45

   41 print_statement: PRINT expression . SEMICOLON
   66 expression: expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   77           | expression . OR expression
   78           | expression . AND expression

    PLUS          shift, and go to state 70
    MINUS         shift, and go to state 71
    TIMES         shift, and go to state 72
    DIVIDE        shift, and go to state 73
    SEMICOLON     shift, and go to state 74
    EQUAL         shift, and go to state 75
    NOTEQUAL      shift, and go to state 76
    GREATER       shift, and go to state 77
    GREATEREQUAL  shift, and go to state 78
    LESS          shift, and go to state 79
    LESSEQUAL     shift, and go to state 80
    OR            shift, and go to state 81
    AND           shift, and go to state 82


State 46

   42 if_statement: IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
   43             | IF LPAREN . expression RPAREN LBRACE statement_list RBRACE elif_statement_list
   44             | IF LPAREN . expression RPAREN LBRACE statement_list RBRACE else_statement
   45             | IF LPAREN . expression RPAREN LBRACE statement_list RBRACE elif_statement_list else_statement

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 83


State 47

   50 while_statement: WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 84


State 48

   51 for_statement: FOR LPAREN . for_init expression SEMICOLON for_update RPAREN LBRACE statement_list RBRACE

    IDENTIFIER  shift, and go to state 55
    SEMICOLON   shift, and go to state 85

    assignment_statement       go to state 86
    enum_assignment_statement  go to state 25
    for_init                   go to state 87


State 49

   56 do_statement: DO LBRACE . statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 1
    PRINT       shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    DO          shift, and go to state 6
    BREAK       shift, and go to state 7
    CONTINUE    shift, and go to state 8
    RETURN      shift, and go to state 9
    ERROR       shift, and go to state 10
    FUNCTION    shift, and go to state 11
    CONST       shift, and go to state 12
    SWITCH      shift, and go to state 13
    ENUM        shift, and go to state 14

    statement_list             go to state 88
    statement                  go to state 17
    assignment_statement       go to state 18
    function_declaration       go to state 19
    function_call              go to state 20
    const_declaration          go to state 21
    switch_statement           go to state 22
    enum_declaration_list      go to state 23
    enum_declaration           go to state 24
    enum_assignment_statement  go to state 25
    print_statement            go to state 26
    if_statement               go to state 27
    while_statement            go to state 28
    for_statement              go to state 29
    do_statement               go to state 30
    break_statement            go to state 31
    continue_statement         go to state 32
    return_statement           go to state 33
    error_statement            go to state 34


State 50

   57 break_statement: BREAK SEMICOLON .

    $default  reduce using rule 57 (break_statement)


State 51

   58 continue_statement: CONTINUE SEMICOLON .

    $default  reduce using rule 58 (continue_statement)


State 52

   59 return_statement: RETURN expression . SEMICOLON
   66 expression: expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   77           | expression . OR expression
   78           | expression . AND expression

    PLUS          shift, and go to state 70
    MINUS         shift, and go to state 71
    TIMES         shift, and go to state 72
    DIVIDE        shift, and go to state 73
    SEMICOLON     shift, and go to state 89
    EQUAL         shift, and go to state 75
    NOTEQUAL      shift, and go to state 76
    GREATER       shift, and go to state 77
    GREATEREQUAL  shift, and go to state 78
    LESS          shift, and go to state 79
    LESSEQUAL     shift, and go to state 80
    OR            shift, and go to state 81
    AND           shift, and go to state 82


State 53

   60 error_statement: ERROR SEMICOLON .

    $default  reduce using rule 60 (error_statement)


State 54

   22 function_declaration: FUNCTION IDENTIFIER . LPAREN function_parameters RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 90


State 55

   19 assignment_statement: IDENTIFIER . ASSIGN expression SEMICOLON
   20                     | IDENTIFIER . ASSIGN function_call
   40 enum_assignment_statement: IDENTIFIER . IDENTIFIER ASSIGN IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 35
    ASSIGN      shift, and go to state 36


State 56

   28 const_declaration: CONST assignment_statement .

    $default  reduce using rule 28 (const_declaration)


State 57

   29 switch_statement: SWITCH LPAREN . IDENTIFIER RPAREN LBRACE switch_statement_details RBRACE

    IDENTIFIER  shift, and go to state 91


State 58

   35 enum_declaration: ENUM IDENTIFIER . LBRACE enum_item_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 92


State 59

    0 $accept: program $end .

    $default  accept


State 60

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


State 61

   40 enum_assignment_statement: IDENTIFIER IDENTIFIER ASSIGN . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 93


State 62

   25 function_call: IDENTIFIER . LPAREN function_arguments RPAREN SEMICOLON
   63 expression: IDENTIFIER .

    LPAREN  shift, and go to state 37

    $default  reduce using rule 63 (expression)


State 63

   20 assignment_statement: IDENTIFIER ASSIGN function_call .

    $default  reduce using rule 20 (assignment_statement)


State 64

   19 assignment_statement: IDENTIFIER ASSIGN expression . SEMICOLON
   66 expression: expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   77           | expression . OR expression
   78           | expression . AND expression

    PLUS          shift, and go to state 70
    MINUS         shift, and go to state 71
    TIMES         shift, and go to state 72
    DIVIDE        shift, and go to state 73
    SEMICOLON     shift, and go to state 94
    EQUAL         shift, and go to state 75
    NOTEQUAL      shift, and go to state 76
    GREATER       shift, and go to state 77
    GREATEREQUAL  shift, and go to state 78
    LESS          shift, and go to state 79
    LESSEQUAL     shift, and go to state 80
    OR            shift, and go to state 81
    AND           shift, and go to state 82


State 65

   25 function_call: IDENTIFIER LPAREN function_arguments . RPAREN SEMICOLON
   26 function_arguments: function_arguments . COMMA expression

    RPAREN  shift, and go to state 95
    COMMA   shift, and go to state 96


State 66

   27 function_arguments: expression .
   66 expression: expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   77           | expression . OR expression
   78           | expression . AND expression

    PLUS          shift, and go to state 70
    MINUS         shift, and go to state 71
    TIMES         shift, and go to state 72
    DIVIDE        shift, and go to state 73
    EQUAL         shift, and go to state 75
    NOTEQUAL      shift, and go to state 76
    GREATER       shift, and go to state 77
    GREATEREQUAL  shift, and go to state 78
    LESS          shift, and go to state 79
    LESSEQUAL     shift, and go to state 80
    OR            shift, and go to state 81
    AND           shift, and go to state 82

    $default  reduce using rule 27 (function_arguments)


State 67

   66 expression: expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   77           | expression . OR expression
   78           | expression . AND expression
   79           | MINUS expression .

    $default  reduce using rule 79 (expression)


State 68

   65 expression: LPAREN expression . RPAREN
   66           | expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   77           | expression . OR expression
   78           | expression . AND expression

    PLUS          shift, and go to state 70
    MINUS         shift, and go to state 71
    TIMES         shift, and go to state 72
    DIVIDE        shift, and go to state 73
    RPAREN        shift, and go to state 97
    EQUAL         shift, and go to state 75
    NOTEQUAL      shift, and go to state 76
    GREATER       shift, and go to state 77
    GREATEREQUAL  shift, and go to state 78
    LESS          shift, and go to state 79
    LESSEQUAL     shift, and go to state 80
    OR            shift, and go to state 81
    AND           shift, and go to state 82


State 69

   66 expression: expression . PLUS expression
   67           | expression . MINUS expression
   68           | expression . TIMES expression
   69           | expression . DIVIDE expression
   70           | expression . EQUAL expression
   71           | expression . NOTEQUAL expression
   72           | expression . GREATER expression
   73           | expression . GREATEREQUAL expression
   74           | expression . LESS expression
   75           | expression . LESSEQUAL expression
   76           | NOT expression .
   77           | expression . OR expression
   78           | expression . AND expression

    $default  reduce using rule 76 (expression)


State 70

   66 expression: expression PLUS . expression

    IDENTIFIER  shift, and go to state 38
    STRING      shift, and go to state 39
    INTEGER     shift, and go to state 40
    MINUS       shift, and go to state 41
    LPAREN      shift, and go to state 42
    NOT         shift, and go to state 43
    NILL        shift, and go to state 44

    expression  go to state 98


State 71
